self-made-1/service.yml
apiVersion: v1
kind: Service
metadata:
  name: self-made-1
spec:
  selector:
    app: self-made-1
  type: NodePort
  ports:
  - name: self-made-1
    protocol: TCP
    port: 80
    targetPort: 3000
