self-made-1/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
    - host: vaq-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: self-made-1
                port:
                  number: 8080
